--- a/themes/icarus/layout/common/profile.ejs
+++ b/themes/icarus/layout/common/profile.ejs
@@ -7,6 +7,11 @@
             <h2 id="name"><%= profile.author %></h2>
             <h3 id="title"><%= profile.author_title %></h3>
             <span id="location"><i class="fa fa-map-marker"></i><%= profile.location %></span>
+      <div style="text-align: center; margin-top: 5px;">
+          <a href="http://mvp.microsoft.com/zh-cn/mvp/Bo%20Wu-5000477" target="_blank">
+              <img =id="mvp" src="/img/2014-04-03-mvp-001.png" alt="Microsoft MVP">
+          </a>
+      </div>
             <a id="follow" target="_blank" href="<%= profile.follow %>"><%= __('profile.follow') %></a>
         </div>
         <div class="article-info profile-block">
