Update QR Code.

--- a/themes/icarus/layout/widget/share.ejs
+++ b/themes/icarus/layout/widget/share.ejs
@@ -5,10 +5,12 @@
         <div style="text-align: center">
               <div>
                   <a target="_blank" href="http://url.cn/Jq5bta">
+                      <img border="0" src="/img/qr-qq-group.png" alt="*PowerShell技术交流" title=PowerShell技术交流">
                       <div>
-                          <span style="text-align: center"><strong>PowerShell技术QQ群</strong></an>
+                          <span style="text-align: center"><strong>PowerShell技术QQ群</strong></span>
                       </div>
-                  <img border="0" src="/img/qr-qq-group.png" alt="*PowerShell技术交流" title=PowerShell技术交流"></a><br/>
+                  </a>
+                  <br/>
               </div>
               <div style="clear: both; width: 0px ; height: 0px;"></div>
           </div>
