(auto commit message)

--- a/themes/icarus/layout/widget/share.ejs
+++ b/themes/icarus/layout/widget/share.ejs
@@ -5,7 +5,7 @@
         <div style="text-align: center">
               <div>
                   <a target="_blank" href="http://url.cn/Jq5bta">
-                      <img border="0" src="/img/qr-qq-group.png" alt="*PowerShell技术交流" title=PowerShell技术交流">
+                      <img border="0" src="/img/qr-qq-group.png" alt="PowerShell技术交流" title=PowerShell技术交流">
                       <div>
                           <span style="text-align: center"><strong>PowerShell技术QQ群</strong></span>
                       </div>
