--- a/themes/icarus/layout/common/head.ejs
+++ b/themes/icarus/layout/common/head.ejs
@@ -2,6 +2,7 @@
 <html<%= config.language ? " lang=" + config.language.substring(0, 2) : ""%>>
 <head>
     <meta charset="utf-8">
+    <meta name="baidu-site-verification" content="NnuI7AMrhv" />
     <%
         function capitalize (str) { return str.charAt(0).toUpperCase() + str.substring(1).toLowerCase() }
         var title = page.title;
