--- a/themes/icarus/layout/common/head.ejs
+++ b/themes/icarus/layout/common/head.ejs
@@ -46,4 +46,5 @@
 
     <%- js('vendor/jquery/2.1.3/jquery.min') %>
     <%- partial('plugin/scripts', { isHead: true }) %>
+    <meta name="p:domain_verify" content="9eb711f3ada74903902910c10b1c6da8"/>
 </head>
